--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
   "coveralls": "bee-tools run coverage"
  },
  "dependencies": {
-  "bee-button": "0.0.6",
+  "bee-button": "latest",
   "classnames": "^2.2.5",
   "tinper-bee-core": "latest"
  },
