--- a/package.json
+++ b/package.json
@@ -1,49 +1,51 @@
 {
- "name": "bee-alert",
- "version": "0.1.0",
- "description": "alert ui component for react",
- "keywords": [
-  "react",
-  "react-component",
-  "react-alert",
-  "iuap-design",
-  "neoui-react",
-  "alert"
- ],
- "engines": {
-  "node": ">=4.0.0"
- },
- "homepage": "https://github.com/tinper-bee/alert",
- "author": "",
- "repository": "http://github.com/tinper-bee/alert",
- "bugs": "https://github.com/tinper-bee/alert/issues",
- "license": "MIT",
- "main": "./build/index",
- "config": {
-  "port": 8000
- },
- "scripts": {
-  "dev": "bee-tools run start",
-  "build": "bee-tools run build",
-  "lint": "bee-tools run lint",
-  "test": "bee-tools run test",
-  "chrome": "bee-tools run chrome",
-  "browsers": "bee-tools run browsers",
-  "pub": "bee-tools run pub",
-  "coveralls": "bee-tools run coverage"
- },
- "dependencies": {
-  "bee-button": "latest",
-  "classnames": "^2.2.5",
-  "tinper-bee-core": "latest"
- },
- "devDependencies": {
-  "chai": "^3.5.0",
-  "enzyme": "^2.4.1",
-  "react": "~0.14.0",
-  "react-addons-test-utils": "15.3.2",
-  "react-dom": "~0.14.0",
-  "console-polyfill": "~0.2.1",
-  "es5-shim": "~4.1.10"
- }
+  "name": "bee-alert",
+  "version": "0.1.0",
+  "description": "alert ui component for react",
+  "keywords": [
+    "react",
+    "react-component",
+    "react-alert",
+    "iuap-design",
+    "neoui-react",
+    "alert"
+  ],
+  "engines": {
+    "node": ">=4.0.0"
+  },
+  "homepage": "https://github.com/tinper-bee/alert",
+  "author": "",
+  "repository": "http://github.com/tinper-bee/alert",
+  "bugs": "https://github.com/tinper-bee/alert/issues",
+  "license": "MIT",
+  "main": "./build/index",
+  "config": {
+    "port": 8000
+  },
+  "scripts": {
+    "dev": "bee-tools run start",
+    "build": "bee-tools run build",
+    "lint": "bee-tools run lint",
+    "test": "bee-tools run test",
+    "chrome": "bee-tools run chrome",
+    "browsers": "bee-tools run browsers",
+    "pub": "bee-tools run pub",
+    "coveralls": "bee-tools run coverage"
+  },
+  "dependencies": {
+    "bee-button": "^0.1.5",
+    "classnames": "^2.2.5",
+    "tinper-bee-core": "latest"
+  },
+  "devDependencies": {
+    "chai": "^3.5.0",
+    "enzyme": "^2.4.1",
+    "react": "~0.14.0",
+    "react-addons-test-utils": "15.3.2",
+    "react-dom": "~0.14.0",
+    "console-polyfill": "~0.2.1",
+    "es5-shim": "~4.1.10",
+    "bee-panel": "latest",
+    "bee-layout": "latest"
+  }
 }
